use Integer/Long caches